--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,7 +18,13 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "expo-app-loading": "~1.3.0"
+    "expo-app-loading": "~1.3.0",
+    "phosphor-react-native": "^1.1.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-svg": "^12.3.0",
+    "@gorhom/bottom-sheet": "^4",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-gesture-handler": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
